--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -20,7 +20,6 @@
   margin: 0 0 0 -20px;
   font-size: 14px;
   /* field styles */
-  /* tooltip styles */
   /*
 	Animated skeleton screen using CSS.
 
@@ -90,60 +89,6 @@
 #burst .field-group .weightslider input {
   width: 100%;
   max-width: 400px;
-}
-#burst .burst-tooltip {
-  font-weight: 400;
-  font-size: 13px;
-  position: relative;
-  /* making the .tooltip span a container for the tooltip text */
-  margin-left: 5px;
-}
-#burst .burst-tooltip:before {
-  content: attr(data-text);
-  /* here's the magic */
-  position: absolute;
-  /* vertically center */
-  top: 50%;
-  transform: translateY(-50%);
-  /* move to right */
-  left: 100%;
-  margin-left: 15px;
-  /* and add a small left margin */
-  /* basic styles */
-  width: 600px;
-  padding: 10px;
-  border-radius: 10px;
-  background: #252525;
-  color: #fff;
-  text-align: center;
-  display: none;
-  transition: 0.3s opacity;
-}
-#burst .burst-tooltip:hover:before,
-#burst .burst-tooltip:hover:after {
-  display: flex;
-}
-#burst .burst-tooltip.left:before {
-  /* reset defaults */
-  left: initial;
-  margin: initial;
-  /* set new values */
-  right: 100%;
-  margin-right: 15px;
-}
-#burst .burst-tooltip::after {
-  content: "";
-  position: absolute;
-  /* position tooltip correctly */
-  left: 100%;
-  margin-left: -5px;
-  /* vertically center */
-  top: 50%;
-  transform: translateY(-50%);
-  /* the arrow */
-  border: 10px solid #000;
-  border-color: transparent black transparent transparent;
-  display: none;
 }
 #burst .upsell-grid-container .rsp-logo img {
   height: 30px;
@@ -370,6 +315,76 @@
   padding: 10px;
   margin: 10px;
 }
+/* tooltip styles */
+.burst-tooltip {
+  font-weight: 400;
+  font-size: 13px;
+  position: relative;
+  /* making the .tooltip span a container for the tooltip text */
+  margin-left: 5px;
+  cursor: pointer;
+}
+.burst-tooltip:before {
+  content: attr(data-text);
+  /* here's the magic */
+  position: absolute;
+  /* vertically center */
+  top: 50%;
+  transform: translateY(-50%);
+  /* basic styles */
+  width: 200px;
+  padding: 10px;
+  border-radius: 10px;
+  background: #252525;
+  color: #fff;
+  text-align: center;
+  display: none;
+  transition: 0.3s opacity;
+}
+.burst-tooltip:hover:before,
+.burst-tooltip:hover:after {
+  display: flex;
+}
+.burst-tooltip.left:before {
+  /* reset defaults */
+  left: initial;
+  margin: initial;
+  /* set new values */
+  right: 100%;
+  margin-right: 15px;
+}
+.burst-tooltip.right:before {
+  /* reset defaults */
+  left: initial;
+  margin: initial;
+  /* move to right */
+  left: 100%;
+  margin-left: 15px;
+  /* and add a small left margin */
+}
+.burst-tooltip::after {
+  content: "";
+  position: absolute;
+  /* vertically center */
+  top: 50%;
+  transform: translateY(-50%);
+  /* the arrow */
+  border: 10px solid #000;
+  display: none;
+}
+.burst-tooltip.left::after {
+  right: 100%;
+  margin-right: -5px;
+  border-color: transparent transparent transparent #252525;
+}
+.burst-tooltip.right::after {
+  left: 100%;
+  margin-left: -5px;
+  border-color: transparent #252525 transparent transparent;
+}
+.burst-tooltip img {
+  width: 1em;
+}
 .burst-bullet {
   height: 15px;
   width: 15px;
@@ -549,4 +564,3 @@ input:checked:disabled + .burst-slider {
 input:focus + .burst-slider {
   box-shadow: 0 0 1px #22932e;
 }
-/*# sourceMappingURL=admin.css.map */
