--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -25,7 +25,7 @@
 @rsp-black: #333;
 @rsp-yellow: #f4bf3e;
 @rsp-blue: #29b6f6;
-@rsp-green: #22932e;
+@rsp-green: #61CE70;
 @rsp-red: #D7263D;
 @rsp-pink: #E35899;
 @rsp-orange: #f39c12;
